--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </div>
                     <div class="home__data">
                         <span class="home__new">New In</span>
-                        <h1 class="home__title">YEEZY BOOST <br> SPLY - 350</h1>
+                        <h1 class="home__title">Women's Tree Runners</h1>
                         <p class="home__description">Explore the new collections of sneakers</p>
                         <a href="#" class="button">Explore now</a>
                     </div>
